--- a/NIMELSSA Login Style.css
+++ b/NIMELSSA Login Style.css
@@ -5,11 +5,11 @@
  font-family: arial, sans-serif;
 }
 .html, body {
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../Desktop/background.png)no-repeat center center/cover;
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(image/background.png)no-repeat center center/cover;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -73,10 +73,10 @@
 }
 .image-section{
     flex: 1;
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../Desktop/p.jpg);
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(image/p.jpg);
     background-size: cover;
     background-position:center -50px;
-    height: 100%;
+    height: inherit;
     color: white;
     display: flex;
     justify-content: center;
@@ -84,6 +84,7 @@
     padding: 20px;
     position: relative;
 }
+
 .image-section::before{
     content: "";
     position: absolute;
@@ -103,7 +104,23 @@
     margin-bottom: 10px;
     font-weight: bold;
 }
+.image-section h4{
+    font-size: 24px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    line-height: 1.3;
+}
 .image-section p{
     font-size: 18px;
+    line-height: 1.5;
+    color: grey;
+}
+footer {
+    text-align: center;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    width: 100%;
+    bottom: 0;
 }
 
