--- a/NIMELSSA about style.css
+++ b/NIMELSSA about style.css
@@ -5,88 +5,72 @@
 }
 .body {
     font-family: arial,sans-serif;
-    color: #333;
 }
-.header{
-    background-color: #FFCECE;
-    position: relative;
-    flex-direction: column;
+.container{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 400px;
-    text-align: center;
-    color: #fff;
+    padding: 20px;
+    max-width: 1200px;
+    margin: auto;
+    border-radius: 12px;
 }
-.hero{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+.content-section{
+    flex: 1;
 }
-.overlay{
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.5);
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.text-section{
+    margin-bottom: 40px;
+   
+
 }
-.overlay h1{
-    font-size: 2.5rem;
-    margin-bottom: 10px;
-    z-index: 2;
-}
-.overlay p{
-    font-size: 1.2rem;
-    z-index: 2;
-}
-.hero-image img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: 0;
-}
-.main{
-    margin-top: 20px;
-}
-.about-us{
-     background-color: #FFF;
-     padding: 50px 10%;
-     display: flex;
-     justify-content: center;
-}
-.about-content{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-}
-.about-text{
-    width: 50%;
-}
-.about-text h2{
-    font-size: 2rem;
+.text-section h1{
+    font-size: 2.6rem;
+    line-height: 1.3;
     margin-bottom: 20px;
-    color: #FF6594;
+    right: 50%;
 }
-.about-text p{
-     font-size: 1.1rem;
-     margin-bottom: 15px;
-     line-height: 1.6;
+.text-section p{
+    color: #5a5a5a;
+    font-size: 1.3rem;
+    margin-bottom: 140px;
+    line-height: 1.9;
+    max-width: 550px;
 }
-.footer{
-    background-color: #AB87FF;
-    padding: 30px;
+.image-section img{
+    width: 500px;
+    height: 50vh;
+    border-radius: 10px;
+}
+.image-section h2{
+    font-size: 1.9rem;
+    margin-bottom: 125px;
+    line-height: 2.5;
+    max-width: 550px;
+}
+.image-section p{
+    font-size: 1.9rem;
+    margin-bottom: 125px;
+    line-height: 0.2;
+    max-width: 550px;
+}
+.button{
+    width: 10%;
+    padding: 12px;
+    position: center;
     text-align: center;
-    color: #fff;
+    text-decoration: none;
+    background-color:  rgb(185, 63, 63);
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    font-size: 15px;
 }
-.footer p{
-    font-size: 1.2rem;
+footer {
+    text-align: center;
+    padding: 10px;
+    color: black;
+    font-weight: bold;
+    width: 100%;
+    bottom: 0;
 }
+
+
+
