--- a/NIMELSSA STYLE.css
+++ b/NIMELSSA STYLE.css
@@ -1,124 +1,159 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: century;
 }
-header {
+body{
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(image/library.jpg);
-    height: 100vh;
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    min-height: 100px;
-}
-ul{
-    float: right;
-    list-style-type: none;
-    margin-top: 30px;
-    min-height: 400px;
-    margin-right: 60px;
-    font-size: 16px;
-}
-ul li {
-    display: inline-block;
-}
-ul li a {
-    text-decoration: none;
-    color: #fff;
-    padding: 5px 20px;
-    border: 1px solid transparent;
-    transform: 0.5 ease;
-}
-ul li a:hover {
-    color: brown;
-}
-ul li.active a{
-    background-color: #fff;
-    color: #000;
+    width: 100vw;
+    height: 100vh;
 }
 
-.logo img{
-    float: left;
-    width: 150px;
-    height: auto;
+.active{
+    font-size: 0.7rem;
+    display: flex;
+    width: 50%;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    
 }
-.main {
-    max-width: 1200px;
-    margin: auto;
+
+.active p{
+    color: white;
 }
-.title {
-    position: absolute;
-    top: 46%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-.title h1 {
-    color: #fff;
-    font-size: 36px;
-}
-.title h2 {
-    color: #fff;
-    font-size: 38px;
-}
-.title b {
-    color: rgb(252, 229, 21);
-    font-size: 20px;
-}
-.title p {
-    color: #fff;
-    font-size: 20px;
-}
-.button {
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%,-50%); 
-}
-.btn{
-    border: 1px solid #fff;
-    padding: 5px 20px;
-    color: #fff;
-    transition: 0.5 ease;
-    font-size: 18px;
-    text-decoration: none;
-}
-.btn:hover{
-    background-color: #fff;
-    color: #000;
-}
-.sub-menu {
-    display: none;
-    top: 6%;
-    position: relative;
-}
-.sub-menu{
-    position: absolute;
-}
-.main ul li:hover .sub-menu{
-    display: block;
-    position: absolute;
-    background-color: rgb(231, 201, 28);
-    margin-top: 12px;
-    margin-left: -8px;
-}
-.main ul li:hover .sub-menu ul{
-    display: block;
-    margin: 6px;
-}
-.main ul li:hover .sub-menu ul li {
-    width: 75px;
-    padding: 5px;
-    border-bottom: 1px #fff;
-    background: transparent;
-    transition: 0.4 ease;
-    text-align: left;
-    border-radius: 0px;
-}
-footer {
-    text-align: center;
-    padding: 10px;
-    color: black;
+.active a:hover{
+    color: gold;
     font-weight: bold;
-    width: 100%;
-    bottom: 0;
+}
+a{
+    text-decoration: none;
+    color: white;
 }
 
+.img{
+    height: 100px;
+    width: 100px;
+    margin-top: 15px;
+}
+header{
+    display: flex;
+    justify-content: space-between; 
+    padding: 0 30px 0 30px;
+    align-items: center;
+}
+
+.main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 9%;
+}
+.button{
+    margin-top: 30px;
+    display: flex;
+    column-gap: 50px;
+}
+
+.button button{
+    background: transparent;
+    color: white;
+    width: 250px;
+    font-weight: bold;
+    border: 0.2px solid white;
+    padding: 5px;
+}
+.button button:hover{
+    background-color: white;
+    color: black;
+}
+
+.followuP{
+    color: gold;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+h1, h2, .emma{
+    color: white;
+}
+h1{
+    font-size: 7rem;
+}
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 70px;
+    background-color: rgb(245, 210, 11);
+    width: 300px;
+    padding: 7px 0 7px 0;
+    border-radius: 10px;
+    font-family:sans-serif;
+    font-size: 0.8rem;
+}
+
+
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.menu{
+    display: none;
+}
+@media screen and (max-width:650px){
+    .menu{
+        width: 270px;
+        height: 350px;
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        row-gap: 15px;
+        background-color: white;
+        position: absolute;
+        right: 2px;
+        top: 12%;
+        border-radius: 10px;
+    }
+    .menu p{
+        color: black;
+    }
+    .menu a{
+        color: black;
+    }
+ .active{
+    display: none;
+ }
+ h1{
+    font-size: 2.2rem;
+}
+.main{
+    padding: 10px;
+}
+ .button{
+    margin-top: 25%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+ }
+ .emma{
+    margin-top: 10px;
+ }
+ .logo{
+    margin-top: 20px;
+ }
+ footer{
+    width: 100%;
+    height: 20px;
+    width: 90vw;
+    background-color: rgb(245, 210, 11);
+ }
+ .barIcon{
+    color: white;
+    font-size: 1.4rem;
+ }
+}
