--- a/NIMELSSA STYLE.css
+++ b/NIMELSSA STYLE.css
@@ -70,6 +70,10 @@ header{
     background-color: white;
     color: black;
 }
+.button button a:hover{
+    background-color: white;
+    color: black;
+}
 
 .followuP{
     color: gold;
