--- a/NIMELSSA Login Style.css
+++ b/NIMELSSA Login Style.css
@@ -24,8 +24,16 @@
     box-shadow: 0 10px 30px rgba(0,0,0,0.2);
     overflow: hidden;
 }
+.signup{
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+   }
+   .signup p{
+     font-size: 0.8rem;
+     margin-top: 30px;
+   }
 .login-form {
-    flex: 1;
     padding: 40px;
     background-color: #f3f1f1;
 }
@@ -43,6 +51,7 @@
 .login-form input{
     width: 100%;
     padding: 12px;
+    font-size: 0.9rem;
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -58,14 +67,16 @@
 .button{
     width: 40%;
     padding: 12px;
-    position: left;
-    text-align: center;
-    text-decoration: none;
     background-color:  rgb(185, 63, 63);
     border: none;
     border-radius: 2px;
     cursor: pointer;
     font-size: 15px;
+    color: white;
+    border-radius: 25px;
+}
+.button:hover{
+    background-color: rgb(141, 11, 11); ;
 }
 .login-form .signup{
     text-align: center;
@@ -122,5 +133,38 @@ footer {
     font-weight: bold;
     width: 100%;
     bottom: 0;
+}
+@media screen and (max-width:650px){
+    .image-section{
+        display: none;
+    }
+    .container{
+        background-color: blue;
+        height: 70vh;
+        width: 90vw;
+        border-radius: 10px;
+        box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    }
+   .login-form{
+
+    height: 70vh;
+    width: 90vw;
+    border-radius: 10px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+   }
+   footer{
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+   }
+   .signup{
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+   }
+   .signup p{
+     font-size: 0.8rem;
+     margin-top: 30px;
+   }
 }
 
