--- a/NIMELSSA about style.css
+++ b/NIMELSSA about style.css
@@ -90,15 +90,16 @@ footer {
         border-radius: 12px;
     }
     .image-section h2{
-        font-size: 1.9rem;
+        font-size: 1.4rem;
         margin-bottom: 25px;
-        line-height: 3;
+        width: 100%;
+        line-height: 2;
 
     }
-    .image-section p{
-
-        margin-bottom: 25px;
-    
-
+   
+    .image-section img{
+        width: 100%;
+        height: 250px;
+        border-radius: 10px;
     }
 }
