--- a/NIMELSSA 200LEVEL.css
+++ b/NIMELSSA 200LEVEL.css
@@ -24,18 +24,18 @@ nav {
     border-bottom: brown;
 }
 
-nav ul{
+.navDiv{
     list-style-type: none;
 }
 nav li{
     display: inline;
     margin:0 15px;   
 }
-nav ul li a{
-    color: brown;
+.navDiv a{
+    color: whitesmoke;
     text-decoration: none;
 }
-nav ul li a:hover{
+.navDiv a:hover{
     font-weight: bold;
     text-decoration: underline;
     text-decoration-color: white;
@@ -62,11 +62,11 @@ section h2{
      border-bottom: none;
 }
 .menu-item h3{
-    margin: 0 o 5px;
+    margin: 0 0 5px;
     color: white;
 }
 .menu-item p{
-    margin: 0 o 10px;
+    margin: 0 0 10px;
     color: rgb(240, 240, 12);
 }
 .price {
@@ -108,5 +108,20 @@ footer {
     cursor: pointer;
     font-size: 15px;
 }
+a{
+    color: aquamarine;
+}
 
-
+@media screen and (max-width:650px){
+    .menu-item img{
+        height: 90px;
+        width: 90px;
+        border-radius: 20px;
+    }
+    .navDiv p{
+        font-size: 0.8rem;
+    }
+    h1{
+        font-size: 1.5rem;
+    }
+}
