--- a/NIMELSSA STYLE.css
+++ b/NIMELSSA STYLE.css
@@ -70,10 +70,7 @@ header{
     background-color: white;
     color: black;
 }
-.button button a:hover{
-    background-color: white;
-    color: black;
-}
+
 
 .followuP{
     color: gold;
@@ -110,6 +107,16 @@ footer{
 }
 .menu{
     display: none;
+}
+@media screen and (min-width:650px) and (max-width:1050px) {
+    .active{
+        width: 70vw;
+        display: flex;
+    
+    }
+    .main{
+        margin-top: 30%;
+    }
 }
 @media screen and (max-width:650px){
     .menu{
@@ -163,4 +170,7 @@ footer{
     color: white;
     font-size: 1.4rem;
  }
+ .bar-icon{
+    display: block;
+}
 }
