--- a/NIMELSSA about style.css
+++ b/NIMELSSA about style.css
@@ -107,3 +107,14 @@ footer {
         font-size: 2.4rem;
     }
 }
+
+
+@media screen and (min-width:650px) and (max-width:1050px) {
+    .container{
+        display: flex;
+        padding: 20px;
+        flex-direction: column;
+        margin: auto;
+        border-radius: 12px;
+    }
+}
