--- a/NIMELSSA100 level.css
+++ b/NIMELSSA100 level.css
@@ -1,4 +1,5 @@
 body{
+   
     font-family: Arial, sans-serif;
     margin:0;
     padding:0;
@@ -113,6 +114,12 @@ a{
 }
 
 @media screen and (max-width:650px){
+    .sec{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
     .menu-item img{
         height: 90px;
         width: 90px;
