--- a/NIMELSSA about style.css
+++ b/NIMELSSA about style.css
@@ -34,13 +34,19 @@
     line-height: 1.9;
     max-width: 500px;
 }
+.text-section span{
+    color: green;
+}
+.card{
+   display: none;
+}
 .image-section img{
     width: 490px;
     height: 50vh;
     border-radius: 10px;
 }
 .image-section h2{
-    font-size: 1.9rem;
+    font-size: 1.6rem;
     margin-bottom: 125px;
     line-height: 2.5;
     max-width: 550px;
@@ -106,6 +112,20 @@ footer {
         margin-bottom: 5px;
         font-size: 2.4rem;
     }
+    .card{
+        display: block;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        text-align: center;
+        overflow: hidden;
+
+    }
+    .card img{
+        width: 100%;
+        height: 40vh;
+        border-top-left-radius: 10px;
+    }
+    
 }
 
 
