--- a/NIMELSSA about style.css
+++ b/NIMELSSA about style.css
@@ -118,12 +118,14 @@ footer {
         box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         text-align: center;
         overflow: hidden;
+        margin-top: 30px;
 
     }
     .card img{
         width: 100%;
         height: 40vh;
         border-top-left-radius: 10px;
+        
     }
     
 }
